[package]
name = "arp-scan"
description = "A minimalistic ARP scan tool"
license = "AGPL-3.0-or-later"
version = "0.13.1"
authors = ["Saluki"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Saluki/arp-scan-rs"
repository = "https://github.com/Saluki/arp-scan-rs"
keywords = ["arp", "scan", "network", "security"]
categories = ["command-line-utilities"]
exclude = ["/.semaphore", "/data", "/release.sh", ".*"]

[dependencies]

# CLI & utilities
clap = { version = "3.2", default-features = false, features = ["std", "suggestions", "color"] }
ansi_term = "0.12"
rand = "0.8"
ctrlc = "3.2"

# Network
pnet = "0.31"
pnet_datalink = "0.31"
ipnetwork = "0.19"
dns-lookup = "1.0"

# Parsing & exports
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
